Significant work on testing and cleaning up code some